# feature_extraction

./: .gitignore  CMakeLists.txt  mainpage.dox  manifest.xml  nodelet_plugins.xml  package.xml  rviz-config.vcg
cfg/: stereo_feature_extractor_params.yaml
data/: artificial_calibration_left.yaml  artificial_calibration_right.yaml  real_calibration_left.yaml  real_calibration_right.yaml
data/camera_flex_narrow/: truth.txt
data/camera_flex_wide/: truth.txt
evaluation/: CMakeLists.txt
evaluation/depth_estimation/: CMakeLists.txt  plane_fitting.cpp
include/feature_extraction/: cv_descriptor_extractor.h  cv_key_point_detector.h  cv_surf_extractor.h  descriptor_extractor.h  descriptor_extractor_factory.h  drawing.h  exceptions.h  feature_extractor.h  feature_extractor_factory.h  features_io.h  key_point.h  key_point_detector.h  key_point_detector_factory.h  key_points_filter.h  smart_surf.h  smart_surf_descriptor_extractor.h  smart_surf_extractor.h  smart_surf_key_point_detector.h  surf.h  surf_extractor.h
include/feature_extraction_ros/: conversions.h  region_of_interest_server.h
include/feature_matching/: estimate_rigid_transformation.h  match_constraints.h  match_filters.h  match_methods.h  matching_constraints.h  matching_methods.h  stereo_depth_estimator.h  stereo_feature_matcher.h
include/stereo_feature_extraction/: Surf.h  conversions.h  cv_surf_extractor.h  drawing.h  feature_extractor.h  feature_extractor_factory.h  key_point.h  stereo_camera_model.h  stereo_feature.h  stereo_feature_extractor.h  stereo_feature_matcher.h  stereo_feature_set.h  stereo_matching.h  surf_extractor.h
launch/: debug.launch  draw_test.launch  draw_test_live.launch  extractor_with_manager.launch  feature_extractor.launch  full_test.launch  full_test2.launch  image_proc_extractor.launch  image_services_manager.launch  manager_camera_image_proc_extractor.launch  multiple_feature_extractors.launch  plane_fitting.launch  stereo_feature_extractor.launch  stereo_feature_extractor_standalone.launch  test_stereo_feature_extractor.launch  test_stereo_feature_matcher.launch  test_visual_altimeter.launch  visual_altimeter.launch
scripts/: extract_all.py
src/: CMakeLists.txt
src/feature_extraction/: cv_descriptor_extractor.cpp  cv_key_point_detector.cpp  cv_surf_extractor.cpp  descriptor_extractor_factory.cpp  drawing.cpp  feature_extractor_factory.cpp  features_io.cpp  key_point_detector_factory.cpp  key_points_filter.cpp  smart_surf.cpp  smart_surf_descriptor_extractor.cpp  smart_surf_extractor.cpp  smart_surf_key_point_detector.cpp  surf.cpp  surf_extractor.cpp
src/feature_extraction_ros/: feature_extractor_nodelet.cpp  region_of_interest_server.cpp
src/feature_matching/: estimate_rigid_transformation.cpp  match_constraints.cpp  match_methods.cpp  matching_constraints.cpp  matching_methods.cpp  stereo_depth_estimator.cpp  stereo_feature_matcher.cpp
src/nodelets/: CMakeLists.txt  feature_extractor_nodelet.cpp  stereo_feature_extraction_nodelet.cpp  stereo_feature_extractor_nodelet.cpp  stereo_feature_matcher_nodelet.cpp
src/nodes/: CMakeLists.txt  feature_extractor_node.cpp  plane_fitting_node.cpp
src/stereo_feature_extraction/: CMakeLists.txt  Surf.cpp  cv_surf_extractor.cpp  drawing.cpp  feature_extractor_factory.cpp  stereo_camera_model.cpp  stereo_feature.cpp  stereo_feature_extractor.cpp  stereo_feature_set.cpp  stereo_matching.cpp  surf_extractor.cpp
src/tools/: CMakeLists.txt  extractor.cpp  feature3d_matcher.cpp  feature_extractor.cpp  plane_fitting.cpp  stereo_extractor.cpp  stereo_matcher.cpp
srv/: ExtractFeatures.srv  SetRegionOfInterest.srv
test/: CMakeLists.txt  check_equal.h  conversions_test.cpp  depth_estimation_test.cpp  descriptor_extractors_test.cpp  detector_extractor_combinations_test.cpp  feature_extractors_test.cpp  features_io_test.cpp  full_stereo_test.cpp  key_point_detectors_test.cpp  key_points_filter_test.cpp  match_constraints_test.cpp  matching_methods_test.cpp  stereo_feature_extractor_test.cpp  stereo_feature_matcher_test.cpp
