<package>
  <name>feature_extraction</name>
  <version>1.0.0</version>
  <description>Package for feature extraction and matching</description>
  <author>Stephan Wirth</author>
  <maintainer email="pl.negre@uib.cat">Pep Lluis Negre</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/feature_extraction</url>
  <url type="bugtracker">https://github.com/srv/feature_extraction/issues</url> 

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl</build_depend>
  <build_depend>opencv2</build_depend> 
  <build_depend>cv_bridge</build_depend> 
  <build_depend>image_transport</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>vision_msgs</build_depend>
  <build_depend>camera_calibration_parsers</build_depend>
  
  <run_depend>pcl_ros</run_depend>
  <run_depend>pcl</run_depend>
  <run_depend>opencv2</run_depend> 
  <run_depend>cv_bridge</run_depend> 
  <run_depend>image_transport</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>vision_msgs</run_depend>
  <run_depend>camera_calibration_parsers</run_depend>

</package>


